# ya-runtime-wasi

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
.github/workflows/: manual.yml  release.yml  rust.yml
conf/: ya-runtime-wasi.json
crates/api/: Cargo.toml  README.md  build.rs
crates/api/integration-tests/rust-wasi-tutorial/: Cargo.toml  manifest.json
crates/api/integration-tests/rust-wasi-tutorial/src/: main.rs
crates/api/src/: deploy.rs  entrypoint.rs  lib.rs  manifest.rs  wasmtime_unit.rs
crates/api/tests/: main.rs
crates/aswasm/: Cargo.toml
crates/aswasm/examples/: asw-server.rs
crates/aswasm/src/: deploy.rs  eth.rs  image.rs  lib.rs  runtime.rs  service.rs
crates/aswasm/src/runtime/: eth.rs  io.rs
crates/test-programs/: Cargo.toml  build.rs
crates/test-programs/tests/integration/: main.rs
crates/test-programs/ya-wasi-tests/: Cargo.toml
integration-tests/rust-wasi-tutorial/: Cargo.toml
src/: deploy.rs  entrypoint.rs  lib.rs  main.rs  manifest.rs  wasmtime_unit.rs
tests/: main.rs  test_outputs.rs  trusted-voting-mgr-66d7ce8208f4da9d7cbd.ywasi
tests/integration/: main.rs  package.rs
