[package]
name = "ya-runtime-wasi-cli"
version = "0.2.1"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"
description="Yagna WASI runtime"

[[bin]]
name = "ya-runtime-wasi"
path = "src/main.rs"
doc = false

[package.metadata.deb]
assets = [
    ["target/release/ya-runtime-wasi", "usr/lib/yagna/plugins/", "755"],
    ["conf/ya-runtime-wasi.json", "usr/lib/yagna/plugins/", "644"]
]

[dependencies]
anyhow = "1.0.19"
env_logger = "0.6"
structopt = "0.3"
ya-runtime-wasi = { path = "crates/api", version = "0.2" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[workspace]
exclude = [
    "crates/api/integration-tests/rust-wasi-tutorial"
]
