[package]
name = "ya-runtime-wasi-cli"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"
description="Yagna WASI runtime"

[[bin]]
name = "ya-runtime-wasi"
path = "src/main.rs"
doc = false

[package.metadata.deb]
assets = [
    ["target/release/ya-runtime-wasi", "usr/lib/yagna/plugins/", "755"],
    ["conf/ya-runtime-wasi.json", "usr/lib/yagna/plugins/", "644"]
]
depends="libgcc1, libc6"

[dependencies]
anyhow = "1.0.19"
env_logger = "0.7"
log = "0.4.11"
serde_json = "1"
serde = { version = "1.0.117", features = [ "derive" ] }
structopt = "0.3"
ya-runtime-wasi = { path = "crates/api", version = "0.2", optional = true }
ya-runtime-aswasm = { path = "crates/aswasm", version="0.1", optional = true }
zip="0.5"

[dev-dependencies]
tempfile = "3.1.0"

[build-dependencies]
serde_json="1.0"
anyhow="1.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"


[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[workspace]
exclude = [
    "crates/api/integration-tests/rust-wasi-tutorial"
]

[features]
default=["wasi"]
sgx=["ya-runtime-wasi/sgx", "log/release_max_level_error"]
wasi=["ya-runtime-wasi"]
aswasm=["ya-runtime-aswasm", "log/release_max_level_error"]
integration-tests=['ya-runtime-wasi/integration-tests']
