[package]
name = "ya-runtime-wasi"
version = "0.2.2"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"
description="Yagna WASI runtime embedding API"
readme = "README.md"
repository = "https://github.com/golemfactory/ya-runtime-wasi"
homepage = "https://github.com/golemfactory/ya-runtime-wasi"
documentation = "https://docs.rs/ya-runtime-wasi"

[dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime-wasi = "0.20"
wasi-common = "0.20"
libc = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
ya-runtime-api = { version = "0.1", features=["codec"] }
zip="0.5"

[dependencies.wasmtime]
version = "0.20"
default-features=false

[dev-dependencies]
env_logger = "0.6"
tempfile = "3"

[build-dependencies]
anyhow = "1"
zip="0.5"

[features]
integration-tests = []
sgx=[]
