[package]
name = "ya-runtime-aswasm"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"
description="Yagna WASM runtime embedding API"
readme = "README.md"
repository = "https://github.com/golemfactory/ya-runtime-wasi"
homepage = "https://github.com/golemfactory/ya-runtime-wasi"
documentation = "https://docs.rs/ya-runtime-wasi"

[dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = { version = "0.20", default-features = false }
ya-runtime-api = { version = "0.1", git = "https://github.com/golemfactory/yagna.git", features=["codec"] }
zip="0.5"
libsecp256k1 = "0.3.5"
tiny-keccak = { version = "2.0", features = ["keccak", "sha3"] }
hex="0.4.2"

rand="0.7.3"

[dev-dependencies]
env_logger = "0.6"
tempfile = "3"
structopt = "0.3.20"

[build-dependencies]
anyhow = "1"
zip="0.5"

[features]
integration-tests = []

